# rag-project

./: .env.example  .gitignore  AGENTS.md  CHECKPOINT_RECOVERY.md  CHUNKING_PAIR_EVAL_REPORT.md  IMPLEMENTATION_COMPLETE.md  KAGGLE_TRAINING_GUIDE.md  README.md  TRAINING_IMPLEMENTATION_STATUS.md  artifact_manifest_phase2_2.json  demo_ambiguity_rag.py  download_condambigqa.py  examples.jsonl  hallucination_training_colab.ipynb  pyproject.toml  test_datasets.py
archive/: README.md
config/: README.md  adamw_lora_balanced_recovery_v2.yaml  adamw_lora_finreg_detector_fever_combo_v1.yaml  adamw_lora_finreg_detector_fever_ragaware_v1.yaml  adamw_lora_finreg_detector_ragaware_v1.yaml  adamw_lora_finreg_detector_reviewed_v1.yaml  adamw_lora_finreg_detector_v1.yaml  adamw_lora_finregbench_phase2_2_mixed_v2_balanced.yaml  adamw_lora_finregbench_phase2_2_mixed_v3_balanced_recall.yaml  adamw_lora_finregbench_phase2_2_mixed_warmstart.yaml  adamw_lora_finregbench_phase2_2_prefill.yaml  adamw_lora_finregbench_phase2_2_prefill_localexport.yaml  adamw_lora_sanity_ambigqa_mini.yaml  adamw_lora_targeted_multipleqa_recovery_v2.yaml  adamw_pilot_ambigqa_mini.yaml  base_config.yaml  final_finreg_qwen3b_detector.yaml  final_finreg_qwen3b_detector_stochastic.yaml  final_finreg_qwen3b_rag.yaml  finreg_phase1_sources.yaml  finregbench_modernbert_detector.yaml  finregbench_modernbert_detector_v3_hardmix.yaml  gating_demo.yaml  gating_demo_ebcar.yaml  gating_demo_mgte.yaml  gating_disaster_ebcar_logit_mi_sc009.yaml  gating_disaster_ebcar_logit_mi_sc009_focaldet.yaml  gating_disaster_ebcar_logit_mi_sc009_neutralguarddet.yaml  gating_disaster_ebcar_rep_mi_sc009.yaml  gating_energy_base.yaml  gating_energy_ebcar.yaml  gating_energy_ebcar_abstain.yaml  gating_energy_ebcar_consistency_only_sc050.yaml  (+141 more)
data/: README.md
(+428 files in other folders)
