[tool.poetry]
name = "modular-rag"
version = "0.1.0"
description = "Modular RAG system with LangChain and HuggingFace"
authors = ["Talha"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

# Core Framework
langchain = "^0.1.0"
langchain-community = "^0.0.38"
langchain-huggingface = "^0.0.1"

# HuggingFace
transformers = "^4.36.0"
sentence-transformers = "^2.2.2"
torch = "^2.1.0"
accelerate = "^0.25.0"
bitsandbytes = {version = "^0.41.3", optional = true}
datasets = "^2.14.0"
evaluate = "^0.4.0"

# Vector Databases
chromadb = "^0.4.22"
faiss-cpu = "^1.7.4"

# Document Loaders
pypdf = "^3.17.4"
unstructured = {extras = ["local-inference"], version = "^0.11.6"}
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.4"
python-magic = {version = "^0.4.27", optional = true}

# Reranking
rank-bm25 = "^0.2.2"

# Utilities
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
tqdm = "^4.66.1"
typing-extensions = "^4.9.0"

# Training & Evaluation
scikit-learn = "^1.3.0"
tensorboard = "^2.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
ipython = "^8.19.0"
jupyter = "^1.0.0"

[tool.poetry.extras]
gpu = ["bitsandbytes"]
all = ["bitsandbytes", "python-magic"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
